<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_view"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_rinci"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_kegiatan"
            android:title="@string/menu_tools" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_pendaftaran"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_notifikasi"
                android:title="@string/menu_send" />
            <item
                android:id="@+id/nav_keluar"
                android:icon="@drawable/ic_exit"
                android:title="@string/menu_keluar" />
        </menu>
    </item>

</menu>
